# OMSS_generator

./: .gitignore  How to get started with omss.md  How to get started with omss.qmd  README.md  README.txt  Walkthru.qmd  Walkthru_aran.qmd  Walkthru_nkj.qmd  alternatives.py  alternatives2.py  app.py  code_for_weird_complicated_shape.py  configuration.py  constraints.py  create_entire_matrix.py  entity.py  main.py  matrix.py  matrix_generation.py  omss documentation.md  omss_documentation.html  omss_documentation.md  omss_documentation.qmd  pyproject.toml  render.py  row_generation.py  rules.py  rules_2.py  seed.py  subentities.py  testing.py  tutorial.md  tutorial.qmd  untitled0.py
src/omss/: __init__.py  alternatives.py  configuration.py  element.py  entity.py  matrix.py  render.py  rules.py  rules_generator.py  seed.py
